--- a/client/src/index.css
+++ b/client/src/index.css
@@ -1,3 +1,6 @@
+/* lo saque del google fonts y despues lo puse en tailwind.config.js en el extend en font family */
+@import url('https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&family=Playfair+Display:wght@400;500;600;700&family=Raleway:wght@400;500;600;700&display=swap');
+
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
